# quoted

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: deploy-api.yml  deploy-ui-gh-pages.yaml  deploy-ui-vercel.yaml  deploy-ui.yaml  deploy-vercel.yaml
quoted_api/: .vercelignore  Cargo.toml  README.md  vercel.json
quoted_api/api/: quotes.rs  shows.rs
quoted_api/api/quote/: random.rs
quoted_api/api/show/[show]/: seasons.rs
quoted_api/api/show/[show]/season/[season]/: episodes.rs
quoted_api/api/show/[show]/season/[season]/episode/[episode]/: quotes.rs
quoted_api/src/: api_response.rs  lib.rs  models.rs  setup.rs
quoted_api/src/models/: quote_models.rs
quoted_api_models/: Cargo.toml
quoted_api_models/src/: episode.rs  lib.rs  page.rs  quote.rs  season.rs  show.rs
quoted_cli/: Cargo.toml
quoted_cli/src/: api.rs  cli.rs  commands.rs  main.rs  models.rs
quoted_cli/src/commands/: common.rs  quote.rs  random.rs  show.rs
quoted_db/: Cargo.toml
quoted_db/src/: connect.rs  error.rs  lib.rs
quoted_db_entity/: Cargo.toml  README.md
quoted_db_entity/src/: character.rs  character_show.rs  customers.rs  episode.rs  invoices.rs  lib.rs  mod.rs  prelude.rs  quote.rs  quote_part.rs  revenue.rs  season.rs  show.rs  users.rs
quoted_db_migration/: Cargo.toml  README.md  mod.rs
quoted_db_migration/src/: lib.rs  m20220101_000001_create_show_table.rs  m20240914_000500_create_character_table.rs  m20240914_080125_create_season_n_episode_tables.rs  m20240914_162612_create_show_character_table.rs  m20240914_200407_create_quote_table.rs  m20240914_214423_add_unique_constraint_to_quote.rs  m20241001_185027_add_season_name.rs  m20241006_082413_multi_part_quote.rs  main.rs
quoted_db_seeder/: Cargo.toml  README.md
quoted_db_seeder/data/: quotes.csv  shows.csv
quoted_db_seeder/src/: auth.rs  cli.rs  client.rs  error.rs  helper.rs  id.rs  main.rs  parse_csv.rs  seeder.rs  sheets.rs
quoted_ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
quoted_ui/scripts/: create-component.ts
quoted_ui/src/: _globals.scss  index.css  main.tsx  route-definitions.ts  routes.tsx
quoted_ui/src/Home/: Home.module.scss  Home.tsx
quoted_ui/src/Layout/: Layout.module.scss  Layout.tsx  index.ts
quoted_ui/src/Layout/Content/: Content.module.scss  Content.tsx  index.ts  useScrollContentTo.tsx
quoted_ui/src/Layout/Header/: Header.module.scss  Header.tsx
quoted_ui/src/Layout/Navigation/BurgerMenu/: BurgerMenu.module.scss  BurgerMenu.tsx  index.ts
quoted_ui/src/Layout/Navigation/NavList/: NavList.module.scss  NavList.tsx  index.ts
quoted_ui/src/Layout/Navigation/SideNav/: SideNav.module.scss  (+2 more)
quoted_ui/src/Shows/: Episodes.module.scss  Episodes.tsx  NavToQuotesButton.tsx  Seasons.module.scss  Seasons.tsx  Shows.module.scss  Shows.tsx  index.tsx  queries.ts
quoted_ui/src/Shows/Quotes/: Quotes.module.scss  Quotes.tsx  index.ts  queries.ts  schema.ts
quoted_ui/src/components/Accordion/: Accordion.module.scss  Accordion.tsx
quoted_ui/src/components/Button/: Button.module.scss  Button.tsx
quoted_ui/src/components/Loading/: Loading.module.scss  Loading.tsx
quoted_ui/src/components/Page/: Page.module.scss  Page.tsx
quoted_ui/src/components/PageOverlay/: PageOverlay.module.scss  PageOverlay.tsx  index.ts
quoted_ui/src/components/Pagination/: Pagination.module.scss  Pagination.tsx  index.ts  usePaginatedQuery.ts
quoted_ui/src/hooks/: useToggle.ts  useValidatedQueryParams.ts
quoted_ui/src/services/: quoted-api-models.ts  quoted-api-proxy.ts  quoted-api-service.ts
(+2 files in other folders)
