[package]
name = "quoted_api"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "quote"
path = "api/quote/random.rs"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
dotenvy = "0.15.7"
openssl = { version = "0.10.59", features = ["vendored"] }
quoted_db = { path = "../quoted_db" }
quoted_db_entity = { path = "../quoted_db_entity" }
quoted_api_models = { path = "../quoted_api_models" }
thiserror = "1.0.63"
sea-orm = { version = "1.0.0-rc.5", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
o2o = "0.4.10"
vercel_runtime = "1.1.4"
tokio = { version = "1.40.0", features = ["fs", "macros", "rt-multi-thread"] }
http = "1.1.0"
serde_urlencoded = "0.7.1"
