[package]
name = "quoted_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["fs", "macros", "rt-multi-thread"] }
clap = { version = "4.5.17", features = ["derive"] }
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
quoted_api_models = { path = "../quoted_api_models" }
serde_urlencoded = "0.7.1"
