[package]
name = "quoted_db_seeder"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dotenvy = "0.15.7"
quoted_db = { path = "../quoted_db" }
quoted_db_migration = { path = "../quoted_db_migration" }
quoted_db_entity = { path = "../quoted_db_entity" }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "1.0.0-rc.5", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
] }
thiserror = "1.0.63"
google-sheets4 = "5.0.5"
clap = { version = "4.5.17", features = ["derive"] }
serde_json = "1.0.128"
